Fix spacings on ch4 featured case study

--- a/assets/sass/base/prose.scss
+++ b/assets/sass/base/prose.scss
@@ -13,6 +13,15 @@
         margin-top: 0;
     }
     h2 {
-        @include font(37px, 42px);
+        @include font(30px, 35px);
+        letter-spacing: px2rem(-0.43px);
+    }
+}
+@media screen and (min-width: px2em(500px)) {
+    .Prose {
+        h2 {
+            @include font(43px, 49px);
+            letter-spacing: px2rem(-0.64px);
+        }
     }
 }
