--- a/assets/sass/components/image-block.scss
+++ b/assets/sass/components/image-block.scss
@@ -13,3 +13,9 @@
     font-weight: 700;
     -webkit-font-smoothing: antialiased;
 }
+@media screen and (min-width: px2em(500px)) {
+    .ImageBlock {
+        padding-top: px2rem(32px);
+        padding-bottom: px2rem(32px);
+    }
+}
